--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "progressive"
   ],
   "scripts": {
-    "taskrunner": "cross-env NODE_ENV=development node tools/run.js",
-    "dev": "cross-env NODE_ENV=development node tools/run.js dev",
-    "dev:inspect": "cross-env NODE_ENV=development node --inspect tools/run.js dev",
+    "taskrunner": "cross-env NODE_ENV=development node scripts/run.js",
+    "dev": "cross-env NODE_ENV=development node scripts/run.js dev",
+    "dev:inspect": "cross-env NODE_ENV=development node --inspect scripts/run.js dev",
     "dev:verbose": "npm run dev -- --verbose",
     "dev:analyze": "npm run dev -- --analyze",
     "dev:lint": "npm run taskrunner -- lint",
-    "build": "cross-env NODE_ENV=production node tools/run.js build",
-    "build:release": "cross-env NODE_ENV=production node tools/run.js build --release",
+    "build": "cross-env NODE_ENV=production node scripts/run.js build",
+    "build:release": "cross-env NODE_ENV=production node scripts/run.js build --release",
     "build:analyze": "npm run build -- --analyze",
     "analyze:bundle-buddy": "npx bundle-buddy build/static/scripts/*.map",
     "analyze:slow-deps": "npx slow-deps",
@@ -75,6 +75,8 @@
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.5",
     "@radum/stylelint-config": "0.2.0",
+    "@webscaffold/task-core": "0.1.0-alpha.2",
+    "@webscaffold/task-clean": "0.1.0-alpha.2",
     "assets-webpack-plugin": "3.9.10",
     "ava": "2.1.0",
     "babel-loader": "8.0.6",
