Update linting modules, linting errors

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "lodash": "4.17.11",
     "log-process-errors": "5.0.0",
     "lusca": "1.6.1",
-    "marko": "4.18.1",
+    "marko": "4.18.2",
     "mime": "2.4.4",
     "morgan": "1.9.1",
     "pretty-error": "2.2.0-rc.1",
@@ -74,7 +74,8 @@
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.4.4",
     "@babel/preset-env": "7.4.5",
-    "@radum/stylelint-config": "0.2.0",
+    "@radum/eslint-config": "0.1.1",
+    "@radum/stylelint-config": "0.3.0",
     "@webscaffold/task-core": "0.1.0-alpha.2",
     "@webscaffold/task-clean": "0.1.0-alpha.2",
     "assets-webpack-plugin": "3.9.10",
@@ -90,15 +91,8 @@
     "cross-env": "5.2.0",
     "directory-named-webpack-plugin": "4.0.1",
     "emittery": "0.4.1",
-    "eslint": "5.16.0",
-    "eslint-config-kentcdodds": "14.3.3",
+    "eslint": "6.0.1",
     "eslint-formatter-pretty": "2.1.1",
-    "eslint-plugin-compat": "3.1.2",
-    "eslint-plugin-eslint-comments": "3.1.1",
-    "eslint-plugin-import": "2.17.3",
-    "eslint-plugin-node": "9.1.0",
-    "eslint-plugin-promise": "4.1.1",
-    "eslint-plugin-unicorn": "9.1.0",
     "execa": "1.0.0",
     "fibers": "4.0.1",
     "figures": "3.0.0",
@@ -132,11 +126,9 @@
     "stack-utils": "1.0.2",
     "stylelint": "10.1.0",
     "stylelint-formatter-pretty": "1.0.3",
-    "stylelint-no-unsupported-browser-features": "3.0.2",
-    "stylelint-scss": "3.6.1",
     "supports-color": "7.0.0",
     "terser-webpack-plugin": "1.3.0",
-    "webpack": "4.34.0",
+    "webpack": "4.35.0",
     "webpack-bundle-analyzer": "3.3.2",
     "webpack-dashboard": "3.0.7",
     "webpack-dev-middleware": "3.7.0",
