--- a/package.json
+++ b/package.json
@@ -76,8 +76,11 @@
     "@babel/preset-env": "7.4.5",
     "@radum/eslint-config": "0.2.0",
     "@radum/stylelint-config": "0.3.0",
-    "@webscaffold/task-core": "0.1.0-alpha.2",
-    "@webscaffold/task-clean": "0.1.0-alpha.2",
+    "@webscaffold/task-core": "0.1.0-alpha.5",
+    "@webscaffold/task-copy": "0.1.0-alpha.3",
+    "@webscaffold/task-clean": "0.1.0-alpha.5",
+    "@webscaffold/task-css-compiler": "0.1.0-alpha.1",
+    "@webscaffold/task-js-compiler": "0.0.1-alpha.0",
     "assets-webpack-plugin": "3.9.10",
     "ava": "2.1.0",
     "babel-loader": "8.0.6",
