Update dev tasks, bump deps, add TypeScript check WIP

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "analyze:bundle-buddy": "npx bundle-buddy build/static/scripts/*.map",
     "analyze:slow-deps": "npx slow-deps",
     "deploy:heroku": "git subtree push --prefix build heroku master",
+    "type-check": "tsc --noEmit",
     "test": "ava"
   },
   "dependencies": {
@@ -52,7 +53,7 @@
     "helmet": "3.18.0",
     "joi": "14.3.1",
     "lit-html": "1.1.1",
-    "lodash": "4.17.13",
+    "lodash": "4.17.14",
     "log-process-errors": "5.0.1",
     "lusca": "1.6.1",
     "marko": "4.18.8",
@@ -76,11 +77,12 @@
     "@babel/preset-env": "7.5.4",
     "@radum/eslint-config": "0.4.1",
     "@radum/stylelint-config": "0.3.0",
-    "@webscaffold/task-core": "0.1.0-alpha.6",
-    "@webscaffold/task-copy": "0.1.0-alpha.4",
-    "@webscaffold/task-clean": "0.1.0-alpha.6",
-    "@webscaffold/task-css-compiler": "0.1.0-alpha.2",
-    "@webscaffold/task-js-compiler": "0.1.0-alpha.0",
+    "@webscaffold/task-clean": "0.1.0-alpha.7",
+    "@webscaffold/task-copy": "0.1.0-alpha.5",
+    "@webscaffold/task-core": "0.1.0-alpha.7",
+    "@webscaffold/task-css-compiler": "0.1.0-alpha.3",
+    "@webscaffold/task-js-compiler": "0.1.0-alpha.1",
+    "@webscaffold/task-watcher": "0.1.0-alpha.1",
     "assets-webpack-plugin": "3.9.10",
     "ava": "2.2.0",
     "babel-loader": "8.0.6",
