--- a/package.json
+++ b/package.json
@@ -77,10 +77,11 @@
     "@babel/preset-env": "7.5.5",
     "@radum/eslint-config": "0.5.0",
     "@radum/stylelint-config": "0.3.0",
-    "@webscaffold/task-core": "0.1.0-alpha.7",
-    "@webscaffold/task-copy": "0.1.0-alpha.5",
+    "@webscaffold/task-browser-sync": "0.1.0-alpha.0",
     "@webscaffold/task-clean": "0.1.0-alpha.7",
-    "@webscaffold/task-css-compiler": "0.1.0-alpha.3",
+    "@webscaffold/task-copy": "0.1.0-alpha.5",
+    "@webscaffold/task-core": "0.1.0-alpha.7",
+    "@webscaffold/task-css-compiler": "0.1.0-alpha.4",
     "@webscaffold/task-js-compiler": "0.1.0-alpha.1",
     "@webscaffold/task-watcher": "0.1.0-alpha.1",
     "assets-webpack-plugin": "3.9.10",
@@ -133,6 +134,7 @@
     "stylelint-formatter-pretty": "1.1.2",
     "supports-color": "7.0.0",
     "terser-webpack-plugin": "1.3.0",
+    "timestamp": "0.0.1",
     "webpack": "4.37.0",
     "webpack-bundle-analyzer": "3.3.2",
     "webpack-dashboard": "3.0.7",
