--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "sass": "1.22.9",
     "sass-mq": "5.0.1",
     "sharp": "0.23.0",
-    "size-plugin": "1.2.0",
+    "size-plugin": "^1.2.0",
     "stack-trace": "0.0.10",
     "stack-utils": "1.0.2",
     "stylelint": "10.1.0",
