Update dev task, fix server task, bump deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,13 @@
     "@radum/eslint-config"
   ],
   "rules": {
-    "filenames/match-exported": "off"
+    "filenames/match-exported": "off",
+    "unicorn/prevent-abbreviations": ["error",
+      {
+        "whitelist": {
+          "run-dev": true
+        }
+      }
+    ]
   }
 }
