--- a/.env.development
+++ b/.env.development
@@ -34,6 +34,10 @@ USE_BROTLI=true
 # notice: 5, info: 6, debug: 7
 LOG_LEVEL=debug
 
+# Task runner tasks log level, pushed directly into reporter / signale
+# debug, timer, info, default, warn, error
+WEBSCAFFOLD_LOG_LEVEL=default
+
 # Development only
 HTTPS_ENABLED=false
 SSL_CERT_FILE_NAME=localhost.crt
