--- a/package.json
+++ b/package.json
@@ -77,13 +77,13 @@
     "@babel/preset-env": "7.5.5",
     "@radum/eslint-config": "1.0.0",
     "@radum/stylelint-config": "0.3.0",
-    "@webscaffold/task-browser-sync": "0.1.0-alpha.0",
-    "@webscaffold/task-clean": "0.1.0-alpha.7",
-    "@webscaffold/task-copy": "0.1.0-alpha.5",
-    "@webscaffold/task-core": "0.1.0-alpha.7",
-    "@webscaffold/task-css-compiler": "0.1.0-alpha.4",
-    "@webscaffold/task-js-compiler": "0.1.0-alpha.1",
-    "@webscaffold/task-watcher": "0.1.0-alpha.1",
+    "@webscaffold/task-browser-sync": "0.1.0-alpha.2",
+    "@webscaffold/task-clean": "0.1.0-alpha.8",
+    "@webscaffold/task-copy": "0.1.0-alpha.6",
+    "@webscaffold/task-core": "0.1.0-alpha.8",
+    "@webscaffold/task-css-compiler": "0.1.0-alpha.5",
+    "@webscaffold/task-js-compiler": "0.1.0-alpha.2",
+    "@webscaffold/task-watcher": "0.1.0-alpha.2",
     "assets-webpack-plugin": "3.9.10",
     "ava": "2.2.0",
     "babel-loader": "8.0.6",
@@ -99,7 +99,7 @@
     "emittery": "0.4.1",
     "eslint": "6.1.0",
     "eslint-formatter-pretty": "2.1.1",
-    "execa": "2.0.3",
+    "execa": "^2.0.3",
     "fibers": "4.0.1",
     "figures": "3.0.0",
     "globby": "10.0.1",
@@ -127,7 +127,7 @@
     "sass": "1.22.9",
     "sass-mq": "5.0.1",
     "sharp": "0.23.0",
-    "size-plugin": "^1.2.0",
+    "size-plugin": "1.2.0",
     "stack-trace": "0.0.10",
     "stack-utils": "1.0.2",
     "stylelint": "10.1.0",
