--- a/src/ssl/.gitignore
+++ b/src/ssl/.gitignore
@@ -1,5 +1,8 @@
 rootCA.pem
 rootCA-key.pem
 
-localhost+2.pem
-localhost+2-key.pem
+localhost.pem
+localhost-key.pem
+
+local.dev+1-key.pem
+local.dev+1.pem
