--- a/.env.development
+++ b/.env.development
@@ -40,6 +40,7 @@ WEBSCAFFOLD_LOG_LEVEL=default
 
 # Development only
 HTTPS_ENABLED=false
+# The app will automatically prepend the path like this `../ssl/{FILE_NAME}`
 SSL_CERT_FILE_NAME=localhost.crt
 SSL_KEY_FILE_NAME=localhost.key
 
