--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
-    "dotenv": "8.0.0",
+    "dotenv": "8.1.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
     "express-rate-limit": "5.0.0",
     "express-session": "1.16.2",
     "helmet": "3.20.0",
     "joi": "14.3.1",
-    "lit-html": "1.1.1",
+    "lit-html": "1.1.2",
     "lodash": "4.17.15",
     "log-process-errors": "5.0.2",
     "lusca": "1.6.1",
@@ -62,6 +62,7 @@
     "response-time": "2.3.2",
     "rev-hash": "3.0.0",
     "server-timing": "2.1.0",
+    "signale": "^1.4.0",
     "spdy": "4.0.1",
     "time-stamp": "2.2.0",
     "winston": "3.2.1"
@@ -83,7 +84,7 @@
     "@webscaffold/task-js-compiler": "0.1.0-alpha.2",
     "@webscaffold/task-watcher": "0.1.0-alpha.2",
     "assets-webpack-plugin": "3.9.10",
-    "ava": "2.2.0",
+    "ava": "2.3.0",
     "babel-loader": "8.0.6",
     "babel-plugin-console": "0.2.1",
     "browser-sync": "2.26.7",
@@ -91,14 +92,14 @@
     "chokidar": "3.0.2",
     "clean-css": "4.2.1",
     "compression-webpack-plugin": "^3.0.0",
-    "core-js": "3.2.0",
+    "core-js": "3.2.1",
     "cpy": "7.3.0",
     "cross-env": "5.2.0",
     "directory-named-webpack-plugin": "4.0.1",
     "emittery": "0.4.1",
-    "eslint": "6.1.0",
+    "eslint": "6.2.0",
     "eslint-formatter-pretty": "2.1.1",
-    "execa": "^2.0.3",
+    "execa": "^2.0.4",
     "fibers": "4.0.1",
     "figures": "3.0.0",
     "globby": "10.0.1",
@@ -122,8 +123,8 @@
     "pretty-bytes": "5.3.0",
     "raw-loader": "3.1.0",
     "replace-ext": "1.0.0",
-    "rimraf": "2.6.3",
-    "sass": "1.22.9",
+    "rimraf": "3.0.0",
+    "sass": "1.22.10",
     "sass-mq": "5.0.1",
     "sharp": "0.23.0",
     "size-plugin": "1.2.0",
@@ -134,7 +135,7 @@
     "supports-color": "7.0.0",
     "terser-webpack-plugin": "1.4.1",
     "timestamp": "0.0.1",
-    "webpack": "4.39.1",
+    "webpack": "4.39.2",
     "webpack-bundle-analyzer": "3.4.1",
     "webpack-dev-middleware": "3.7.0",
     "webpack-hot-middleware": "2.25.0",
