Update config files

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
   "semi": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "_comment": "TODO: Explore using this with ESlint https://github.com/prettier/prettier#eslint-integrations"
 }
