--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 	  "module": "esnext",                       /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd' or 'es2015'. */
 	  // "lib": [],                             /* Specify library files to be included in the compilation:  */
 	  "allowJs": true,                          /* Allow JavaScript files to be compiled. */
-	  "checkJs": true,                          /* Report errors in .js files. */
+	  "checkJs": false,                          /* Report errors in .js files. */
 	  // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
 	  // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
 	  // "sourceMap": true,                     /* Generates corresponding '.map' file. */
@@ -55,6 +55,7 @@
     "node_modules",
     "scripts",
     "tests",
-    "./*.js"
+    "./*.js",
+    "./src/server"
   ]
 }
