--- a/package.json
+++ b/package.json
@@ -38,41 +38,41 @@
     "test:scripts": "ava"
   },
   "dependencies": {
-    "@babel/runtime": "^7.6.3",
+    "@babel/runtime": "7.6.3",
     "body-parser": "1.19.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
-    "dotenv": "8.1.0",
+    "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
     "express-rate-limit": "5.0.0",
-    "express-session": "^1.17.0",
+    "express-session": "1.17.0",
     "helmet": "3.21.1",
     "joi": "14.3.1",
     "lit-html": "1.1.2",
     "log-process-errors": "5.0.2",
     "lusca": "1.6.1",
-    "marko": "4.18.14",
+    "marko": "4.18.16",
     "mime": "2.4.4",
     "morgan": "1.9.1",
     "pretty-error": "2.2.0-rc.1",
     "raven-js": "3.27.2",
     "response-time": "2.3.2",
-    "server-timing": "^2.1.1",
+    "server-timing": "2.1.1",
     "spdy": "4.0.1",
     "time-stamp": "2.2.0",
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
+    "@babel/core": "7.6.4",
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-proposal-optional-chaining": "7.6.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.6.2",
-    "@babel/preset-env": "^7.6.3",
-    "@radum/eslint-config": "^1.2.0",
-    "@radum/stylelint-config": "^1.0.0",
+    "@babel/preset-env": "7.6.3",
+    "@radum/eslint-config": "1.2.0",
+    "@radum/stylelint-config": "1.0.0",
     "@webscaffold/task-browser-sync": "0.1.0-alpha.3",
     "@webscaffold/task-clean": "0.1.0-alpha.9",
     "@webscaffold/task-copy": "0.1.0-alpha.7",
@@ -86,13 +86,13 @@
     "babel-plugin-console": "0.2.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "compression-webpack-plugin": "3.0.0",
-    "core-js": "^3.3.2",
-    "cross-env": "^6.0.3",
+    "core-js": "3.3.2",
+    "cross-env": "6.0.3",
     "directory-named-webpack-plugin": "4.0.1",
-    "emittery": "^0.5.1",
-    "eslint": "^6.5.1",
+    "emittery": "0.5.1",
+    "eslint": "6.5.1",
     "eslint-formatter-pretty": "2.1.1",
-    "execa": "^3.0.0",
+    "execa": "3.2.0",
     "figures": "3.0.0",
     "html-webpack-plugin": "4.0.0-beta.8",
     "meow": "5.0.0",
@@ -101,15 +101,15 @@
     "prettier": "1.18.2",
     "raw-loader": "3.1.0",
     "sass-mq": "5.0.1",
-    "size-plugin": "2.0.0",
+    "size-plugin": "2.0.1",
     "stack-trace": "0.0.10",
     "stack-utils": "1.0.2",
-    "stylelint": "^11.1.1",
-    "stylelint-formatter-pretty": "^1.1.3",
-    "terser-webpack-plugin": "^2.1.3",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.5.2",
-    "webpack-dev-middleware": "^3.7.2",
+    "stylelint": "11.1.1",
+    "stylelint-formatter-pretty": "1.1.3",
+    "terser-webpack-plugin": "2.1.3",
+    "webpack": "4.41.2",
+    "webpack-bundle-analyzer": "3.6.0",
+    "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
     "webpack-monitor": "1.0.14",
     "workbox-webpack-plugin": "4.3.1",
