--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "raven-js": "3.27.2",
     "response-time": "2.3.2",
     "server-timing": "2.1.1",
+    "sirv": "0.4.2",
     "spdy": "4.0.1",
     "time-stamp": "2.2.0",
     "winston": "3.2.1"
