Refactor templates, data passed, icons

--- a/.env.development
+++ b/.env.development
@@ -20,6 +20,7 @@ SENTRY_DSN_URL=https://xxxxxxxx@sentry.io/yyyyyyy
 # HTTP port
 # Default : 3000
 PORT=3000
+# Default : 3443
 HTTPS_PORT=3443
 
 # HTTPS automatic redirect from HTTP
@@ -34,18 +35,21 @@ USE_BROTLI=true
 # notice: 5, info: 6, debug: 7
 LOG_LEVEL=debug
 
-# Task runner tasks log level, pushed directly into reporter / signale
-# debug, timer, info, default, warn, error
-WEBSCAFFOLD_LOG_LEVEL=default
-
-# Development only
-HTTPS_ENABLED=false
-# The app will automatically prepend the path like this `../ssl/{FILE_NAME}`
-SSL_CERT_FILE_NAME=localhost.crt
-SSL_KEY_FILE_NAME=localhost.key
-
 # - - - - - - - - Express - - - - - - - -
 
 # Secret for `express-session`.
 # Ref : https://github.com/expressjs/session#secret
 SESSION_SECRET=__your-secret-goes-here__
+
+# Development only
+HTTPS_ENABLED=false
+
+# The app will automatically prepend the path like this `../ssl/{FILE_NAME}`
+SSL_CERT_FILE_NAME=localhost.crt
+SSL_KEY_FILE_NAME=localhost.key
+
+# - - - - - - - - Task runner - - - - - -
+
+# Task runner tasks log level, pushed directly into reporter / signale
+# debug, timer, info, default, warn, error
+WEBSCAFFOLD_LOG_LEVEL=default
