--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "express": "4.17.1",
     "express-rate-limit": "5.0.0",
     "express-session": "1.17.0",
-    "helmet": "^3.21.2",
+    "helmet": "3.21.2",
     "joi": "14.3.1",
     "lit-html": "1.1.2",
     "log-process-errors": "5.0.2",
     "lusca": "1.6.1",
-    "marko": "4.18.16",
+    "marko": "4.18.18",
     "mime": "2.4.4",
     "morgan": "1.9.1",
     "pretty-error": "2.2.0-rc.1",
@@ -74,30 +74,30 @@
     "@babel/preset-env": "7.6.3",
     "@radum/eslint-config": "1.2.0",
     "@radum/stylelint-config": "1.0.0",
-    "@webscaffold/task-browser-sync": "0.1.0-alpha.3",
-    "@webscaffold/task-clean": "0.1.0-alpha.9",
-    "@webscaffold/task-copy": "0.1.0-alpha.7",
-    "@webscaffold/task-core": "0.1.0-alpha.9",
-    "@webscaffold/task-css-compiler": "0.1.0-alpha.6",
-    "@webscaffold/task-js-compiler": "0.1.0-alpha.3",
-    "@webscaffold/task-watcher": "0.1.0-alpha.3",
+    "@webscaffold/task-browser-sync": "0.1.0-alpha.4",
+    "@webscaffold/task-clean": "0.1.0-alpha.10",
+    "@webscaffold/task-copy": "0.1.0-alpha.8",
+    "@webscaffold/task-core": "0.1.0-alpha.10",
+    "@webscaffold/task-css-compiler": "0.1.0-alpha.8",
+    "@webscaffold/task-js-compiler": "0.1.0-alpha.4",
+    "@webscaffold/task-watcher": "0.1.0-alpha.4",
     "assets-webpack-plugin": "3.9.10",
     "ava": "2.4.0",
     "babel-loader": "8.0.6",
     "babel-plugin-console": "0.2.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "compression-webpack-plugin": "3.0.0",
-    "core-js": "^3.3.3",
+    "core-js": "3.3.4",
     "cross-env": "6.0.3",
     "directory-named-webpack-plugin": "4.0.1",
     "emittery": "0.5.1",
-    "eslint": "6.5.1",
+    "eslint": "6.6.0",
     "eslint-formatter-pretty": "2.1.1",
     "execa": "3.2.0",
-    "figures": "^3.1.0",
+    "figures": "3.1.0",
     "html-webpack-plugin": "4.0.0-beta.8",
     "meow": "5.0.0",
-    "nodemon": "^1.19.4",
+    "nodemon": "1.19.4",
     "os": "0.1.1",
     "pnp-webpack-plugin": "1.5.0",
     "prettier": "1.18.2",
@@ -108,7 +108,7 @@
     "stack-utils": "1.0.2",
     "stylelint": "11.1.1",
     "stylelint-formatter-pretty": "1.1.3",
-    "terser-webpack-plugin": "^2.2.1",
+    "terser-webpack-plugin": "2.2.1",
     "webpack": "4.41.2",
     "webpack-bundle-analyzer": "3.6.0",
     "webpack-dev-middleware": "3.7.2",
