--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "analyze:bundle-buddy": "npx bundle-buddy build/static/scripts/*.map",
     "analyze:slow-deps": "npx slow-deps",
     "type-check": "tsc --noEmit",
-    "test:scripts": "ava"
+    "test:scripts": "ava",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@babel/runtime": "7.6.3",
@@ -72,6 +73,8 @@
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.6.3",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/prompt": "^8.2.0",
     "@radum/eslint-config": "1.2.0",
     "@radum/stylelint-config": "1.0.0",
     "@webscaffold/task-browser-sync": "0.1.0-alpha.4",
@@ -86,6 +89,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-console": "0.2.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "commitizen": "^4.0.3",
     "compression-webpack-plugin": "3.0.0",
     "core-js": "3.3.4",
     "cross-env": "6.0.3",
@@ -96,6 +100,7 @@
     "execa": "3.2.0",
     "figures": "3.1.0",
     "html-webpack-plugin": "4.0.0-beta.8",
+    "husky": "^3.0.9",
     "meow": "5.0.0",
     "nodemon": "1.19.4",
     "os": "0.1.1",
@@ -116,5 +121,15 @@
     "webpack-monitor": "1.0.14",
     "workbox-webpack-plugin": "4.3.1",
     "write-file-webpack-plugin": "4.5.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/@commitlint/prompt"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+    }
   }
 }
