--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "lit-html": "1.1.2",
     "log-process-errors": "5.0.2",
     "lusca": "1.6.1",
-    "marko": "4.18.18",
+    "marko": "^4.18.19",
     "mime": "2.4.4",
     "morgan": "1.9.1",
     "pretty-error": "2.2.0-rc.1",
@@ -91,7 +91,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "commitizen": "^4.0.3",
     "compression-webpack-plugin": "3.0.0",
-    "core-js": "3.3.4",
+    "core-js": "^3.3.5",
     "cross-env": "6.0.3",
     "directory-named-webpack-plugin": "4.0.1",
     "emittery": "0.5.1",
