chore: bump deps, add more granular webpack config

--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "helmet": "3.21.2",
     "joi": "14.3.1",
     "lit-html": "1.1.2",
+    "lodash": "^4.17.15",
     "log-process-errors": "6.0.0",
     "lusca": "1.6.1",
-    "marko": "4.18.34",
+    "marko": "4.18.35",
     "mime": "2.4.4",
     "morgan": "1.9.1",
     "pretty-error": "2.2.0-rc.1",
@@ -84,13 +85,13 @@
     "@webscaffold/task-js-compiler": "0.1.0-alpha.6",
     "@webscaffold/task-watcher": "0.1.0-alpha.6",
     "assets-webpack-plugin": "3.9.10",
-    "ava": "3.0.0",
+    "ava": "3.1.0",
     "babel-loader": "8.0.6",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "commitizen": "4.0.3",
     "compression-webpack-plugin": "3.1.0",
     "core-js": "3.6.4",
-    "cross-env": "6.0.3",
+    "cross-env": "7.0.0",
     "directory-named-webpack-plugin": "4.0.1",
     "emittery": "0.5.1",
     "eslint": "6.8.0",
@@ -98,11 +99,11 @@
     "execa": "4.0.0",
     "figures": "3.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
-    "husky": "4.0.10",
+    "husky": "4.2.1",
     "meow": "6.0.0",
     "nodemon": "2.0.2",
     "os": "0.1.1",
-    "pnp-webpack-plugin": "1.5.0",
+    "pnp-webpack-plugin": "1.6.0",
     "prettier": "1.19.1",
     "raw-loader": "4.0.0",
     "sass-mq": "5.0.1",
