--- a/package.json
+++ b/package.json
@@ -39,43 +39,43 @@
     "commit": "git-cz"
   },
   "dependencies": {
-    "@babel/runtime": "7.9.2",
+    "@babel/runtime": "7.10.2",
     "body-parser": "1.19.0",
-    "chalk": "3.0.0",
+    "chalk": "4.0.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
-    "express-rate-limit": "5.1.1",
-    "express-session": "1.17.0",
+    "express-rate-limit": "5.1.3",
+    "express-session": "1.17.1",
     "helmet": "3.22.0",
     "joi": "14.3.1",
     "lit-html": "1.2.1",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.15",
     "log-process-errors": "6.1.1",
     "lusca": "1.6.1",
-    "marko": "4.19.7",
-    "mime": "2.4.4",
+    "marko": "4.21.10",
+    "mime": "2.4.6",
     "morgan": "1.10.0",
     "pretty-error": "2.2.0-rc.1",
     "raven-js": "3.27.2",
     "response-time": "2.3.2",
-    "server-timing": "3.1.1",
-    "sirv": "0.4.2",
-    "spdy": "4.0.1",
+    "server-timing": "3.2.1",
+    "sirv": "0.4.6",
+    "spdy": "4.0.2",
     "time-stamp": "2.2.0",
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.8.7",
-    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/core": "7.10.2",
+    "@babel/plugin-proposal-class-properties": "7.10.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/preset-env": "7.8.7",
+    "@babel/plugin-transform-runtime": "7.10.1",
+    "@babel/preset-env": "7.10.2",
     "@commitlint/config-conventional": "8.3.4",
     "@commitlint/prompt": "8.3.5",
-    "@radum/eslint-config": "2.2.1",
+    "@radum/eslint-config": "3.0.0",
     "@radum/stylelint-config": "2.0.0",
     "@webscaffold/task-browser-sync": "0.1.0-alpha.6",
     "@webscaffold/task-clean": "0.1.0-alpha.12",
@@ -84,41 +84,41 @@
     "@webscaffold/task-css-compiler": "0.1.0-alpha.10",
     "@webscaffold/task-js-compiler": "0.1.0-alpha.6",
     "@webscaffold/task-watcher": "0.1.0-alpha.6",
-    "assets-webpack-plugin": "3.9.10",
-    "ava": "3.5.2",
+    "assets-webpack-plugin": "3.9.12",
+    "ava": "3.8.2",
     "babel-loader": "8.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "commitizen": "4.0.3",
-    "compression-webpack-plugin": "3.1.0",
-    "core-js": "3.6.4",
+    "commitizen": "4.1.2",
+    "compression-webpack-plugin": "4.0.0",
+    "core-js": "3.6.5",
     "cross-env": "7.0.2",
     "directory-named-webpack-plugin": "4.0.1",
-    "emittery": "0.6.0",
-    "eslint": "6.8.0",
+    "emittery": "0.7.0",
+    "eslint": "7.1.0",
     "eslint-formatter-pretty": "3.0.1",
-    "execa": "4.0.0",
+    "execa": "4.0.2",
     "figures": "3.2.0",
-    "html-webpack-plugin": "4.2.0",
-    "husky": "4.2.3",
-    "meow": "6.1.0",
-    "nodemon": "2.0.2",
+    "html-webpack-plugin": "4.3.0",
+    "husky": "4.2.5",
+    "meow": "7.0.1",
+    "nodemon": "2.0.4",
     "os": "0.1.1",
     "pnp-webpack-plugin": "1.6.4",
-    "prettier": "1.19.1",
-    "raw-loader": "4.0.0",
+    "prettier": "2.0.5",
+    "raw-loader": "4.0.1",
     "sass-mq": "5.0.1",
     "size-plugin": "2.0.1",
     "stack-trace": "0.0.10",
-    "stack-utils": "2.0.1",
-    "stylelint": "13.2.1",
-    "stylelint-formatter-pretty": "2.0.0",
-    "terser-webpack-plugin": "2.3.5",
-    "webpack": "4.42.0",
-    "webpack-bundle-analyzer": "3.6.1",
+    "stack-utils": "2.0.2",
+    "stylelint": "13.6.0",
+    "stylelint-formatter-pretty": "2.1.0",
+    "terser-webpack-plugin": "3.0.3",
+    "webpack": "4.43.0",
+    "webpack-bundle-analyzer": "3.8.0",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
     "webpack-monitor": "1.0.14",
-    "workbox-webpack-plugin": "5.1.2",
+    "workbox-webpack-plugin": "5.1.3",
     "write-file-webpack-plugin": "4.5.1"
   },
   "config": {
